# cloudvalidation-dashboard

./: .gitignore  .testr.conf  MANIFEST.in  README.md  README.rst  manage.py  prepare_cloudvalidation.sh  requirements.txt  setup.cfg
cloudvalidation/: cfg.py  dashboard.py  manage.py  settings.py
cloudvalidation/api/: cloudv.py
cloudvalidation/enabled/: _25_identity.py  _30_settings.py  _50_cloudvalidation.py
cloudvalidation/local/: .secret_key_store
cloudvalidation/ostf_jobs/: forms.py  panel.py  tables.py  urls.py  views.py
cloudvalidation/ostf_jobs/templates/ostf_jobs/: _job.html  create.html  index.html  job.html
cloudvalidation/ostf_tests/: panel.py  panel_group.py  tables.py  tests.py  urls.py  views.py
cloudvalidation/static/cloudvalidation/css/: cloudvalidation.css
cloudvalidation/templates/cloudvalidation/: base.html
cloudvalidation_dashboard/: dashboard.py  settings.py
cloudvalidation_dashboard/external_api/: cloudvalidation_ostf_adapter.py
cloudvalidation_dashboard/local/: _50_cloudvalidation.py  local_settings.py.settings
cloudvalidation_dashboard/panels/: panel_groups.py  tests.py  urls.py  views.py
cloudvalidation_dashboard/tables/: ostf_table.py
cloudvalidation_dashboard/templates/cloudvalidation_dashboard/: base.html
doc/source/: conf.py
mcloudv_web/: dashboard.py  version.py
mcloudv_web/common/: cfg.py
mcloudv_web/external_api/: cloudvalidation_ostf_adapter.py
mcloudv_web/panels/: panel.py  panel_groups.py  urls.py  views.py
mcloudv_web/panels/templates/panels/: index.html
mcloudv_web/tables/: ostf_table.py
mcloudv_web/templates/mcloudv_web/: base.html
static/dashboard/css/: 10e7a391f06c.css  7ea689ab352b.css
static/dashboard/js/: 34a9c527fd98.js
(+5 files in other folders)
