[metadata]
name = mcloudv-web
version = 2015.1
summary = MCloudvalidation web UI
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    mcloud_web

[compile_catalog]
domain = mcloud_web


[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
